fix: correcting alignment issues in flex css

--- a/style.css
+++ b/style.css
@@ -1,31 +1,79 @@
 /* Inti */
-.initial-screen {
-  display: flex;
-  background: purple;
-  z-index: 3;
-  width: 100vw;
-  height: 100vh;
-  color: white;
+body {
+  margin: 0;
 }
 
 .initial-none {
   display: none;
 }
 
+.initial-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: purple;
+  z-index: 3;
+  width: 100vw;
+  height: 100vh;
+  color: white;
+  position: absolute;
+}
+
+.initial-screen > p {
+  font-weight: 800;
+  font-size: 1.5rem;
+  text-align: center;
+  padding-top: 25px;
+}
+
+.initial-screen > ol {
+  list-style: none;
+  text-align: center;
+  margin: 0 14%;
+  padding-left: 0;
+  max-width: 430px;
+}
+
+.initial-screen > ol > li {
+  padding: 10px 0;
+}
+
 .box-selection {
   display: flex;
-  width: 250px;
-  height: 65px;
-  background: violet;
-  color: white;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 35px;
+  padding-top: 15px;
+  font-weight: 550;
+  width: 265px;
+  height: 75px;
+  background: rgb(252, 152, 252);
+  color: brown;
+  border-radius: 5px;
+  box-shadow: 8px 8px 5px 0px rgb(0 0 0 / 55%);
+}
+
+.btn-mobile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 10px;
 }
 
 .btn-select {
-  width: 50px;
-  height: 15px;
+  width: 70px;
+  height: 30px;
+  margin-top: 10px;
   background: turquoise;
-  color: white;
   font-weight: 700;
+  color: brown;
+  border-radius: 15px;
+  box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 55%);
+}
+
+.box-selection:focus {
+  color: turquoise;
+  background: brown;
 }
 
 .discA-style {
@@ -46,9 +94,9 @@
 
 /* Sid */
 
-body {
+/* body {
   margin-top: 100px;
-}
+} */
 
 #field {
   display: flex;
